--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -80,17 +80,17 @@
         <ul>
           <li>
             <img
-              src="images/img1.jpg"
+              src="./images/img1.jpg"
               alt="website on a computer"
               width="360"
             />
           </li>
           <li>
-            <img src="images/img2.jpg" alt="website on phone" width="360" />
+            <img src="./images/img2.jpg" alt="website on phone" width="360" />
           </li>
           <li>
             <img
-              src="images/img3.jpg"
+              src="./images/img3.jpg"
               alt="website on phone and computer"
               width="360"
             />
@@ -105,7 +105,7 @@
         <ul>
           <li>
             <img
-              src="images/photo1.jpg"
+              src="./images/photo1.jpg"
               alt="Mark Guerrero-Product Designer"
               width="264"
             />
@@ -115,7 +115,7 @@
 
           <li>
             <img
-              src="images/photo2.jpg"
+              src="./images/photo2.jpg"
               alt="Tom Ford-Frontend Developer"
               width="264"
             />
@@ -125,7 +125,7 @@
 
           <li>
             <img
-              src="images/photo3.jpg"
+              src="./images/photo3.jpg"
               alt="Camila Garcia-Marketing"
               width="264"
             />
@@ -135,7 +135,7 @@
 
           <li>
             <img
-              src="images/photo4.jpg"
+              src="./images/photo4.jpg"
               alt="Daniel Wilson-UI Designer"
               width="264"
             />
