--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <!-- footer -->
 
     <footer>
-      <a href="./index.html">Webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
